--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/extension-accelerate": "^1.3.0",
     "@radix-ui/react-dialog": "^1.1.10",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-scroll-area": "^1.2.6",
     "@radix-ui/react-separator": "^1.1.4",
     "@radix-ui/react-slot": "^1.1.2",
@@ -47,6 +48,7 @@
     "prisma": "^6.6.0",
     "tailwindcss": "^4",
     "tsx": "^4.19.3",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@types/bun": "latest"
   }
 }
